CSS modules, game card component WIP

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Security-Policy" content="media-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-eval'; ">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <title>Gaming Life</title>
   </head>
